--- a/app/src/main/res/layout/activity_tienda.xml
+++ b/app/src/main/res/layout/activity_tienda.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondodeabajo"
-    tools:context=".MainActivity3" >
+    tools:context=".tienda" >
 
     <ImageView
         android:id="@+id/imageView2"
