--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="splash_name" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground"> @drawable/slash</item>
+    </style>
 
 </resources>
