refactorizados los nombres de botones, imagenes y de las clases (practicamente todo xD)

--- a/app/src/main/res/layout/activity_dificultad.xml
+++ b/app/src/main/res/layout/activity_dificultad.xml
@@ -54,19 +54,19 @@
         android:id="@+id/imageView"
         android:layout_width="388dp"
         android:layout_height="77dp"
-        android:background="@drawable/fondodeabajo"
+        android:background="@drawable/madera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/fondodeabajo" />
+        tools:srcCompat="@drawable/madera" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="89dp"
+        android:layout_height="100dp"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:layout_editor_absoluteX="6dp"
         tools:layout_editor_absoluteY="4dp" />
