--- a/app/src/main/res/values/logoapp_background.xml
+++ b/app/src/main/res/values/logoapp_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="logoapp_background">#EFF6F3</color>
+    <color name="logoapp_background">#F5F6F5</color>
 </resources>
