--- a/app/src/main/res/drawable/slash.xml
+++ b/app/src/main/res/drawable/slash.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/purple_200"></item>
+    <item android:drawable="@color/white"></item>
 
     <item
         android:height="200dp"
         android:width="200dp"
         android:gravity="center">
-        <bitmap android:src="@drawable/i"></bitmap>
+        <bitmap
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/barco"></bitmap>
 
     </item>
 </layer-list>
