--- a/app/src/main/res/layout/activity_tienda.xml
+++ b/app/src/main/res/layout/activity_tienda.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/labomba"
+        app:srcCompat="@drawable/lafinal"
         android:contentDescription="TODO" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
